--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<table cellspacing="2"><tr>
 	<td><table border="8" cellpadding="5" bgcolor="yellow"><tr><td align="center"><font color="red" size="4"><a href="sp92vd.htm">92年校運短片</a></font></td></tr></table></td>
 	<td><table border="8" cellpadding="5" bgcolor="yellow"><tr><td align="center"><font color="red" size="4"><a href="https://www.facebook.com/media/set/?set=oa.1952076724834929">79年國慶總統府前表演照片</a></font></td></tr></table></td>
-	<td><table border="8" cellpadding="5" bgcolor="yellow"><tr><td align="center"><font color="red" size="4"><a href="卑中老照片
-https://get.google.com/albumarchive/114915929969955957859/album/AF1QipMLGNQaUFyqhvgjL_fugpCWdpmjcRfedO0CJcwc?fbclid=IwAR2Dl1nJOjbDbLyT7gQdn5Q7yo3ATjVKekBzBhc5KLUGVA1FXHg1wXxXqDU">卑中老照片</a></font></td></tr></table></td></tr></table>
+	<td><table border="8" cellpadding="5" bgcolor="yellow"><tr><td align="center"><font color="red" size="4"><a href="https://get.google.com/albumarchive/114915929969955957859/album/AF1QipMLGNQaUFyqhvgjL_fugpCWdpmjcRfedO0CJcwc?fbclid=IwAR2Dl1nJOjbDbLyT7gQdn5Q7yo3ATjVKekBzBhc5KLUGVA1FXHg1wXxXqDU">卑中老照片</a></font></td></tr></table></td></tr></table>
 	<font size="5" color="red"><b>回憶</b></font><br>(...約民國93年)
 	<table border="2" bgcolor="cyan" cellpadding="10">
 	<tr><td colspan="4" bgcolor="white" align="center"><b>七年級Gif動畫練習</b></td></te></tr>
